# ietf-rfc-dep

./: Cargo.toml  README.md
crates/: main.rs
crates/cache/: Cargo.toml  README.md
crates/cache/src/: cache.rs  lib.rs  resolve.rs
crates/gui/: Cargo.toml  README.md
crates/gui/src/: app.rs  cache.rs  doc.rs  gui.rs  main.rs  menubar.rs  settings.rs  sidebar.rs  table_view.rs  tabs.rs  viewer.rs
crates/ietf/: Cargo.toml  README.md
crates/ietf/src/: doc.rs  error.rs  lib.rs  meta.rs  url.rs
src/: cache.rs  doc.rs  gui.rs  main.rs
