[package]
name = "rfc-dep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.17.1"
regex = "1.7.0"
serde_json = {version="1.0.103", features = ["raw_value"]}
eframe = "0.22.0"
egui_extras = "0.22.0"