[package]
name = "rfc-dep-ietf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Own crates
rfc-dep-cache = { path = "../cache" }

# For http queries to datatracker
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.29.1", features = ["full"] }
rayon = { version = "1.7.0" }

# For html parsing
scraper = "0.17.1"
regex = "1.7.0"

# For document lookup using datatracker API
# and cache (de)serializing (for saving / loading app state)
serde_json = { version = "1.0.103", features = ["raw_value"] }
serde = { version = "1.0.175", features = ["derive"] }

